Implementing natual selection (not done yet)

--- a/TODO
+++ b/TODO
@@ -10,6 +10,7 @@ Publish competition result as CSV file
 
 
 ========= TODO =========
-
 (Simulate natural selection)
+Detailed report about all actions taken in an iterated dilemma by both prisoners
+
 (Simulate group invading)
